--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ build/Release
 # Commenting this out is preferred by some people, see
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git-
 node_modules
+lib
 libs
 .idea
 UI-Imgs
@@ -33,3 +34,4 @@ UI-Imgs
 #bootstrap
 *.min.css
 *.min.js
+bootstrap*
